--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ canvas {
 }
 h1 {
   text-align: center;
-  margin: 20px;
+  margin-top: 10px;
   font-family: "Press Start 2P", cursive;
 }
 .wrapper {
